Port more cloud docs
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: Abby Cross <across@us.ibm.com>
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -5,10 +5,26 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
-*Last updated 28 January 2025
+*Last updated 26 February 2025*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
-Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathered here are the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
+Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;! Gathered here are the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
+
+##  IBM Quantum Platform
+
+### The next evolution of IBM Quantum Platform: How to prepare for the transition
+
+We are excited to announce a major evolution coming to IBM Quantum Platform, one that will bring a host of new features and provide Open Plan users with access to our state-of-the-art Heron processor.
+
+We are upgrading the Platform as part of our effort to deliver an enterprise-grade cloud experience that leverages new backend infrastructure for enhanced features, increased performance, and the latest data privacy and security measures. These changes lay a foundation to support the scaling of our services alongside the [IBM Quantum Roadmap,](https://www.ibm.com/quantum/technology#roadmap) and to enable the increasingly complex workloads that are required to achieve quantum advantage. 
+
+#### 26 February 2025
+
+- Today, we are releasing an early access version of the upgraded experience, and invite you to [open an account and explore the new interface](https://quantum.cloud.ibm.com). We will continue to roll out updates over the coming months, with the end goal of creating an experience that looks and feels like the classic version of IBM Quantum Platform, but with greater functionality. We will eventually sunset IBM Quantum Platform classic, so stay tuned for updates.
+
+- Please note: If your IBM Quantum Platform access falls under a plan administrator (Premium Plan, Dedicated Service, Startup Program, etc.), you will receive guided migration support through your administrator in the coming months. In the meantime, you are welcome to [create a free Open Plan account to explore the new platform.](https://quantum.cloud.ibm.com)
+
+- For full details on the early access release and upcoming improvements, [check out the blog](https://www.ibm.com/quantum/blog/iqp-upgrade).
 
 ## Latest release summaries
 
@@ -53,7 +69,7 @@ See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2
 
 ### Qiskit Transpiler Service client v0.3.0
 
-We’re pleased to share that the beta release of the Qiskit Transpiler Service is now available to all IBM Quantum&trade; Premium Plan users.
+We’re pleased to share that the beta release of the Qiskit Transpiler Service is now available to all IBM Quantum&reg; Premium Plan users.
 
 The Qiskit Transpiler Service leverages the resources of IBM Cloud&reg; to provide users with the latest transpilation capabilities from the Qiskit SDK. It offers a Python library that helps users seamlessly integrate the service into their current Qiskit patterns and workflows. Perhaps most importantly, the service invites users to experiment with new and improved AI-powered transpiler passes — cutting-edge tools that might be faster and produce better results than traditional transpilation methods.
 
@@ -151,7 +167,7 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
 Visit the newest content in the documentation!
 
-- Introductory and get-started material for these [Qiskit addons](/guides/addons): 
+- Introductory and get-started material for these [Qiskit addons](/guides/addons):
   - [Sample-based quantum diagonalization (SQD)](/guides/qiskit-addons-sqd)
   - [Approximate quantum compiler with tensor networks (AQC-Tensor)](/guides/qiskit-addons-aqc)
   - [Operator backpropagation (OBP)](/guides/qiskit-addons-obp)
@@ -168,10 +184,13 @@ Visit the newest content in the documentation!
 - [Use Qiskit Code Assistant in local mode](/guides/qiskit-code-assistant-local)
 
 **Content additions and improvements**
-
+<LegacyContent>
 - Guidance on how to [securely manage your API token](/guides/setup-channel#set-up-to-use-ibm-quantum-platform), as part of the guide to set up an IBM Quantum channel
-
-- Revisions by Qunasys to the Qiskit Functions [QURI Chemistry](/guides/qunasys-quri-chemistry) guide 
+</LegacyContent>
+<CloudContent>
+- Guidance on how to [securely manage your API token](/guides/cloud-setup)
+</CloudContent>
+- Revisions by Qunasys to the Qiskit Functions [QURI Chemistry](/guides/qunasys-quri-chemistry) guide
 
 - Updated code examples to fix a bug in [Get started with primitives](/guides/get-started-with-primitives)
 
