Don't use /index in URL

--- a/docs/guides/qiskit-addons-utils.ipynb
+++ b/docs/guides/qiskit-addons-utils.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "## Get started with utilities\n",
     "\n",
-    "There are several modules within the `qiskit-addon-utils` package, including one for problem generation for simulating quantum systems, graph coloring to more efficiently place gates in a quantum circuit, and circuit slicing, which can help with [operator backpropagation](/guides/qiskit-addons-obp). The following sections summarize each module. The package's [API documentation](/api/qiskit-addon-utils/index) also contains helpful information.\n",
+    "There are several modules within the `qiskit-addon-utils` package, including one for problem generation for simulating quantum systems, graph coloring to more efficiently place gates in a quantum circuit, and circuit slicing, which can help with [operator backpropagation](/guides/qiskit-addons-obp). The following sections summarize each module. The package's [API documentation](/api/qiskit-addon-utils) also contains helpful information.\n",
     "\n",
     "### Problem generation\n",
     "\n",
