--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -66,7 +66,7 @@
     "/>\n",
     "\n",
     "<Admonition title=\"Note\" type=\"note\">\n",
-    "  This video uses the `QiskitRuntimeService.get_backend` method, which has since been deprecated. Use [`QiskitRuntimeService.backend`](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit-runtime-service#backend) instead.\n",
+    "  This video uses the `QiskitRuntimeService.get_backend` method, which has since been deprecated. Use [`QiskitRuntimeService.backend`](/api/qiskit-ibm-runtime/qiskit-runtime-service#backend) instead.\n",
     "</Admonition>"
    ]
   },
@@ -233,7 +233,12 @@
     "\n",
     "When executing circuits on a device, it is important to optimize the set of instructions that the circuit contains and minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](./transpile#instruction-set-architecture) and must consider the device's basis gates and qubit connectivity.\n",
     "\n",
-    "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA."
+    "<LegacyContent>\n",
+    "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA. It requires that you have already [saved your credentials](/guides/setup-channel#iqp)\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA. It requires that you have already [saved your credentials](/guides/cloud-setup)\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -259,9 +264,6 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "backend = service.least_busy(simulator=False, operational=True)\n",
@@ -570,7 +572,12 @@
    "source": [
     "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
-    "Transform the circuit and observables to match the backend's ISA."
+    "<LegacyContent>\n",
+    "The following code transforms the circuit and observables to match the backend's ISA. It requires that you have already [saved your credentials](/guides/setup-channel#iqp)\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "The following code transforms the circuit and observables to match the backend's ISA. It requires that you have already [saved your credentials](/guides/cloud-setup)\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -582,10 +589,6 @@
    "source": [
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "\n",
