--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -7,8 +7,19 @@
    "source": [
     "# Optimization Solver: A Qiskit Function by Q-CTRL Fire Opal\n",
     "\n",
+    "<LegacyContent>\n",
     "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/q-ctrl-optimization-solver)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/q-ctrl-optimization-solver)\n",
+    "</Admonition>\n",
+    "</CloudContent>\n",
+    "\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "## Overview\n",
@@ -49,8 +60,8 @@
     "| ---------  |-------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------| -------- | ---------- | ---------- |\n",
     "| problem  | `str` or `SparsePauliOp` | One of the representations listed under \"Accepted problem formats\"                                                                                                                                  | Yes | N/A   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
     "| problem_type  | `str`                   | Name of the problem class; only used for graph  and spin chain problem definitions, which are limited to \"maxcut\" or \"spin_chain\"; not required for arbitrary objective function problem definitions | No      | `None`| `\"maxcut\"`      |\n",
-    "| backend_name  | `str`                   | Name of the backend to use                                                                                                                                                                          | No  | Least busy backend that your instance has access to    | `\"hub1/group1/project1\"`      |\n",
-    "| instance  | `str`                   | The hub/group/project to use                                                                                                                                                                        | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"hub1/group1/project1\"`      |\n",
+    "| backend_name  | `str`                   | Name of the backend to use                                                                                                                                                                          | No  | Least busy backend that your instance has access to    | `\"ibm_fez\"`      |\n",
+    "| instance  | `str`                   | The cloud resource name of the instance to use                                                                                                                                                                        | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"CRN\"`      |\n",
     "| options  | `dict`                  | Input options, including the following: (Optional) `session_id`: `str`; default behavior creates a new Session                                                                                      | No | `None`    | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
     "\n",
     "**Accepted problem formats:**\n",
@@ -124,8 +135,13 @@
    "metadata": {},
    "source": [
     "## Get started\n",
+    "<LegacyContent>\n",
+    "First, authenticate using your [IBM Quantum API token](http://quantum.ibm.com/). Then, select the Qiskit Function as follows:\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "First, authenticate using your [IBM Quantum API token](http://quantum.cloud.ibm.com/). Then, select the Qiskit Function as follows:\n",
     "\n",
-    "Authenticate using your [IBM Quantum API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:"
+    "</CloudContent>"
    ]
   },
   {
@@ -137,9 +153,6 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# Access Function\n",
@@ -276,7 +289,7 @@
     "maxcut_job = solver.run(\n",
     "    problem=problem_as_str,\n",
     "    problem_type=\"maxcut\",\n",
-    "    instance=instance,  # E.g. \"ibm-q/open/main\"\n",
+    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_kyiv\"\n",
     ")"
    ]
@@ -493,7 +506,7 @@
     "# Solve the problem\n",
     "mvc_job = solver.run(\n",
     "    problem=srepr(cost_function),\n",
-    "    instance=instance,  # E.g. \"ibm-q/open/main\"\n",
+    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_kyiv\"\n",
     ")"
    ]
