--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -7,8 +7,18 @@
    "source": [
     "# Performance Management: A Qiskit Function by Q-CTRL Fire Opal\n",
     "\n",
+    "<LegacyContent>\n",
     "<Admonition type=\"note\">\n",
-    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/q-ctrl-performance-management)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/q-ctrl-performance-management)\n",
+    "</Admonition>\n",
+    "</CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "## Overview\n",
@@ -87,8 +97,12 @@
    "metadata": {},
    "source": [
     "## Get started\n",
-    "\n",
-    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:"
+    "<LegacyContent>\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.ibm.com/), and select the Qiskit Function as follows:\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -228,7 +242,7 @@
     "qctrl_estimator_job = perf_mgmt.run(\n",
     "    primitive=\"estimator\",\n",
     "    pubs=estimator_pubs,\n",
-    "    instance=instance,  # E.g. \"ibm-q/open/main\"\n",
+    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_kyiv\", or omit to default to the least busy device\n",
     ")"
    ]
@@ -332,13 +346,22 @@
     "### Estimator inputs\n",
     "<Admonition type=\"caution\">Fire Opal Performance Management accepts abstract circuits, in contrast to the native Qiskit Runtime primitives, which only accept circuits that are written in the target backend’s Instruction Set Architecture (ISA). For best results, do not transpile circuits before submitting via the Performance Management function. </Admonition>\n",
     "\n",
+    "<LegacyContent>\n",
     "| Name  | Type  | Description | Required | Default  | Example |\n",
     "|------|------|----------|----------|-----------|-----------|\n",
     "| pubs       | `QctrlEstimatorPubLike` or `list[QctrlEstimatorPubLike]` | One or more tuples containing the inputs listed under `EstimatorPubLike` components   | Yes   | N/A   | `(circuit, observables, parameter_values)`   |\n",
-    "| instance   | `str`   | The hub/group/project to use in that format  | No  | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"hub1/group1/project1\"`     |\n",
+    "| instance   | `str`   | The hub/group/project to use in that format  | No  | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"<hub1/group1/project1>\"`     |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
-    "\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "| Name  | Type  | Description | Required | Default  | Example |\n",
+    "|------|------|----------|----------|-----------|-----------|\n",
+    "| pubs       | `QctrlEstimatorPubLike` or `list[QctrlEstimatorPubLike]` | One or more tuples containing the inputs listed under `EstimatorPubLike` components   | Yes   | N/A   | `(circuit, observables, parameter_values)`   |\n",
+    "| instance   | `str`   | The compute resource number of the instance to use in that format  | No  | A Premium access instance is randomly chosen if your account has access to multiple instances | `\"CRN\"`     |\n",
+    "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
+    "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
+    "</CloudContent>\n",
     "**`QctrlEstimatorPubLike` components (derived from the [Qiskit Runtime PUB definition](/guides/primitive-input-output#estimator-pub)):**\n",
     "- A single circuit defined as a `QuantumCircuit` or in OpenQASM 2.0 or 3.0 string format.\n",
     "- One or more observables that specify the expectation values to estimate, in any of the formats denoted in the list \"Supported observables formats\".\n",
@@ -462,7 +485,7 @@
     "qctrl_sampler_job = perf_mgmt.run(\n",
     "    primitive=\"sampler\",\n",
     "    pubs=sampler_pubs,\n",
-    "    instance=instance,  # E.g. \"ibm-q/open/main\"\n",
+    "    instance=instance,\n",
     "    backend_name=backend_name,  # E.g. \"ibm_kyiv\", or omit to default to the least busy device\n",
     ")"
    ]
@@ -633,7 +656,7 @@
     "| Name       | Type            | Description | Required | Default | Example |\n",
     "|------------|---------------|------------------|----------|----------|--------------------|\n",
     "| pubs       | `QctrlSamplerPubLike` or `list[QctrlSamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
-    "| instance   | `str`     | The hub/group/project to use in that format        | No | A Premium access instance is randomly chosen if your account has access to multiple instances     | `\"hub1/group1/project1\"`   |\n",
+    "| instance   | `str`     | The cloud resource name to use in that format        | No | A Premium access instance is randomly chosen if your account has access to multiple instances     | `\"CRN\"`   |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
     "\n",
