--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -6,6 +6,16 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 # Run jobs in a session
 
+<LegacyContent>
+<Admonition type="note">
+This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/run-jobs-session)
+</Admonition>
+</LegacyContent>
+<CloudContent>
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/run-jobs-session)
+</Admonition>
+</CloudContent>
 Use sessions when you need dedicated and exclusive access to the QPU.
 <LegacyContent>
 <Admonition type="note">
