Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/primitives-rest-api.mdx
+++ b/docs/guides/primitives-rest-api.mdx
@@ -987,7 +987,7 @@ Output
 </LegacyContent>
 <CloudContent>
 <Admonition type="tip" title="Recommendations">
-    - There are several ways to run workloads, depending on your needs: job mode, session mode and batch mode. Learn how to work with session mode and batch mode in the [execution modes topic](./execution-modes-rest-api). Note that Open Plan users cannot submit session jobs.
+    - There are several ways to run workloads, depending on your needs: job mode, session mode, and batch mode. Learn how to work with session mode and batch mode in the [execution modes topic](/guides/execution-modes-rest-api). Note that Open Plan users cannot submit session jobs.
     - Learn how to [initialize your account](./cloud-setup#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.
     - Learn how to [transpile circuits using REST API](./transpile-rest-api).
     - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).
