--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -127,7 +127,7 @@ optimization_level = 3
 
 # If you have not previously saved your credentials, follow instructions at
 # https://quantum.cloud.ibm.com/docs/guides/cloud-setup
-# to authenticate with your API token.
+# to authenticate with your API key.
 service = QiskitRuntimeService(channel="ibm_cloud")
 backend = service.get_backend(backend_name)
 
@@ -180,7 +180,7 @@ def transpile_parallel(circuit, pass_manager):
 
 try:
     # Get backend
-    # Follow instructions at https://quantum.cloud.ibm.com/docs/guides/cloud-setup to authenticate with your API token.
+    # Follow instructions at https://quantum.cloud.ibm.com/docs/guides/cloud-setup to authenticate with your API key.
     service = QiskitRuntimeService(channel="ibm_cloud")
     backend = service.get_backend(backend_name)
 
