--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -1,6 +1,6 @@
 ---
 title: Manage cost on the Standard Plan
-description: How to manage costs of running jobs on QPUs when using the Qiskit Runtime Standard plan.
+description: How to manage costs of running jobs on QPUs when using the Standard Plan on IBM Quantum Platform.
 
 ---
 
@@ -22,7 +22,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 The IBM Cloud&reg; Quantum Standard plan is not free, except when running jobs on simulators. Use the information in this topic to help you understand how much you’re paying and how to limit your costs.
 
 <Admonition type="note">
-  The information in this topic only applies to those who are using the Standard plan for Qiskit Runtime on IBM Cloud.  There are no costs associated with the IBM Quantum Platform Open Plan.
+  The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime on IBM Cloud.  There are no costs associated with the IBM Quantum Platform Open Plan.
 </Admonition>
 
 For instructions, see the [Manage costs](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-cost) topic in the IBM Cloud documentation.
@@ -44,7 +44,7 @@ Learn how to limit your costs when using the Standard Plan on IBM Quantum&reg; P
 
 An instance administrator can limit how much is spent.
 
-To set cost limits on a Standard Plan instance, navigate to the [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances), then click the instance and set the **Cost limit**. The cost limit refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the Total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
+To set cost limits on a Standard Plan instance, navigate to the [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances), then click the instance and set the **Cost limit**. The cost limit refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
 
     <Admonition type="note">
       The cost limit is always specified in US dollars (USD), then converted to runtime seconds. However, for monthly billing purposes, you are charged in your local currency, specified on your IBM Cloud account. Because currency exchange rates can fluctuate, the cost for X runtime seconds might be different when initially calculated in USD than when you’re actually charged in your local currency. As a result, if your local currency is not USD, the total amount charged for the number of seconds specified in this field could vary from the dollar amount you specify.
