--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -59,7 +59,7 @@ service.jobs(backend_name=my_backend)
 
 ## Cancel a job
 
-You can cancel a job from the IBM Quantum Platform dashboard either on the Workloads page or the details page for a specific job. Click the menu with three vertical dots (at the end of the row on the Jobs page, or the top of the page on the Job details page), and select Cancel.
+You can cancel a job from the IBM Quantum Platform dashboard either on the Workloads page or the details page for a specific workload. On the Workloads page, click the three-dots menu at the end of the row for that workload, and select Cancel. If you are on the details page for a specific workload, use the Actions dropdown at the top of the page, and select Cancel.
 
 In Qiskit, use `job.cancel()` to cancel a job.
 
