Port more cloud docs (#2684)
Follow up to https://github.com/Qiskit/documentation/pull/2679. 

This does not bring over yet some of the Qiskit Functions, Hello World,
and Serverless because we need a solution for platform-specific code
cells with notebook testing.

This required working around our checkPagesRender.ts check.
https://github.com/Qiskit/documentation/issues/2685 tracks improving
that.

---------

Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: Abby Cross <across@us.ibm.com>
Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>

--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -5,7 +5,18 @@
    "id": "539f98fa-9ccc-472a-99da-ebe6382243dc",
    "metadata": {},
    "source": [
-    "# Save and retrieve jobs"
+    "# Save and retrieve jobs\n",
+    "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/save-jobs)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/save-jobs)\n",
+    "</Admonition>\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -45,7 +56,7 @@
    "id": "923e6db4-89e1-4e1d-a526-a42454a4c238",
    "metadata": {},
    "source": [
-    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any results stored in memory. To avoid loss of data, you can save results to file and retrieve results of past jobs from IBM Quantum&trade; so your next session can continue where you left off."
+    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any results stored in memory. To avoid loss of data, you can save results to file and retrieve results of past jobs from IBM Quantum&reg; so your next session can continue where you left off."
    ]
   },
   {
@@ -55,9 +66,13 @@
    "source": [
     "## Retrieve jobs from IBM Quantum\n",
     "\n",
-    "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs through the [Workloads dashboard](https://quantum.ibm.com/workloads).\n",
-    "\n",
-    "To find a job programatically, use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) method. By default, this returns the most recent jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last three months. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
+    "<LegacyContent>\n",
+    "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs on the [Workloads page](https://quantum.ibm.com/workloads).\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs on the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
+    "</CloudContent>\n",
+    "To find a job programmatically, use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) method. By default, this returns the most recent jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last three months. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
    ]
   },
   {
