--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -1,20 +1,50 @@
 ---
-title: Manage cost
-description: How to manage costs of running jobs on QPUs when using the Standard plan for IBM Quantum on IBM Cloud.
+title: Manage cost on the Standard Plan
+description: How to manage costs of running jobs on QPUs when using the Standard Plan on IBM Quantum Platform.
 
 ---
 
-# Manage cost
+# Manage cost on the Standard Plan
 
+<LegacyContent>
+<Admonition type="note">
+This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/manage-cost)
+</Admonition>
+</LegacyContent>
+
+<CloudContent>
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/manage-cost)
+</Admonition>
+</CloudContent>
+
+<LegacyContent>
 The IBM Cloud&reg; Quantum Standard plan is not free, except when running jobs on simulators. Use the information in this topic to help you understand how much you’re paying and how to limit your costs.
 
 <Admonition type="note">
-  The information in this topic only applies to those who are using the Standard plan for Qiskit Runtime on IBM Cloud&reg;.  There are no costs associated with the IBM Quantum&trade; Platform Open Plan.
+  The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime on IBM Cloud.  There are no costs associated with the IBM Quantum Platform Open Plan.
 </Admonition>
 
+For instructions, see the [Manage costs](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-cost) topic in the IBM Cloud documentation.
+
+Learn how to limit your costs when using the Standard Plan on IBM Quantum&reg; Platform.
+
+<Admonition type="note">
+  The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime.  There are no costs associated with the IBM Quantum Platform Open Plan.
+</Admonition>
+</LegacyContent>
+<CloudContent>
+Learn how to limit your costs when using the Standard Plan on IBM Quantum&reg; Platform.
+
+<Admonition type="note">
+  The information in this topic only applies to those who are using the Standard Plan for Qiskit Runtime.  There are no costs associated with the IBM Quantum Platform Open Plan.
+</Admonition>
+</CloudContent>
 ## Set a cost limit
 
-An instance administrator can limit how much is spent. To set cost limits, navigate to the [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances), then click the instance and set the **Cost limit**. The cost limit refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the Total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
+An instance administrator can limit how much is spent.
+
+To set cost limits on a Standard Plan instance, navigate to the [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances), then click the instance and set the **Cost limit**. The cost limit refers to the total cost of all jobs run with this instance since it was created, and it will always be greater than or equal to the total cost. After the instance reaches the specified number of total seconds, no further jobs can be run and no more cost is incurred.
 
     <Admonition type="note">
       The cost limit is always specified in US dollars (USD), then converted to runtime seconds. However, for monthly billing purposes, you are charged in your local currency, specified on your IBM Cloud account. Because currency exchange rates can fluctuate, the cost for X runtime seconds might be different when initially calculated in USD than when you’re actually charged in your local currency. As a result, if your local currency is not USD, the total amount charged for the number of seconds specified in this field could vary from the dollar amount you specify.
@@ -22,7 +52,9 @@ An instance administrator can limit how much is spent. To set cost limits, navig
 
 ## How to remove a cost limit
 
-An instance administrator can remove the cost limit. To do so, navigate to the [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances), then open the instance and click the edit button by the **Cost limit**. Delete the value and click **Save**.
+An instance administrator can remove the cost limit.
+
+To remove a cost limit on a Standard Plan instance, navigate to the [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances), then open the instance and click the edit button by the **Cost limit**. Delete the value and click **Save**.
 
 ### What happens when the cost limit is reached
 
@@ -58,13 +90,9 @@ These are the columns relevant to cost:
 - **Usage**: The amount of quantum time used by this job. Quantum time is the duration a QPU is committed to fulfilling a user request.
 - **Cost**: The total cost of running this job.
 
-## Estimate the cost
-
-You can estimate how long a job will run, and therefore its cost, by estimating the job run time.  For details, see the [Workload usage](estimate-job-run-time) topic.
-
 ## Set up spending notifications
 
-You can set up spending notifications to get notified when your account or a particular service reaches a specific spending threshold that you set. For information, see the [IBM Cloud account Type description](https://cloud.ibm.com/docs/account?topic=account-accounts). IBM Cloud spending notifications must be used with other methods of cost management for several reasons:
+On the Standard Plan, you can set up spending notifications to get notified when your account or a particular service reaches a specific spending threshold that you set. For information, see the [IBM Cloud account Type description](https://cloud.ibm.com/docs/account?topic=account-accounts). IBM Cloud spending notifications must be used with other methods of cost management for several reasons:
 
 *   The notifications trigger only *after* cost surpasses the specified limit.
 *   Cost is submitted to the billing system hourly. Therefore, a long delay might occur between the job submission and the spending notification being sent.
