--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -5,10 +5,21 @@ description: How to install, use, and configure Qiskit Code Assistant in Jupyter
 
 # Use Qiskit Code Assistant in JupyterLab
 
+<LegacyContent>
+<Admonition type="note">
+This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/qiskit-code-assistant-jupyterlab)
+</Admonition>
+</LegacyContent>
+<CloudContent>
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/qiskit-code-assistant-jupyterlab)
+</Admonition>
+</CloudContent>
+
 Learn how to install, use, configure, and uninstall the official Qiskit Code Assistant extension in JupyterLab.
 
 <Admonition type="note" title="Notes">
-    - This is an experimental feature available only to IBM Quantum&trade; Premium Plan users.
+    - This is an experimental feature available only to IBM Quantum&reg; Premium Plan users.
     - Qiskit Code Assistant is in preview release status and is subject to change.
     - If you have feedback or want to contact the developer team, use the [Qiskit Slack Workspace channel](https://qiskit.enterprise.slack.com/archives/C07LYA6PL83) or the related public GitHub repositories.
 </Admonition>
@@ -59,7 +70,12 @@ Other settings you might want to change:
 
 ### Authentication and setup
 
+<LegacyContent>
 After installing the extension, it tries to authenticate you. By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API token, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`). If you need help configuring your account, follow the instructions in [Set up to use IBM Quantum Platform.](/guides/setup-channel#set-up-to-use-ibm-quantum-platform)
+</LegacyContent>
+<CloudContent>
+After installing the extension, it tries to authenticate you. By default, the package tries to authenticate to IBM Quantum services with the defined API key, and uses your key from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`). If you need help configuring your account, follow the instructions in [Set up your IBM Cloud account.](/guides/cloud-setup)
+</CloudContent>
 
 By default, the extension uses the `granite-8b-qiskit` model, which is listed in the Model Picker in the bottom status bar.
 
