Remove all absolute URLs to docs

--- a/docs/guides/debug-qiskit-runtime-jobs.ipynb
+++ b/docs/guides/debug-qiskit-runtime-jobs.ipynb
@@ -614,7 +614,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Learn about [Exact and noisy simulation with Qiskit Aer primitives.](https://docs.quantum.ibm.com/guides/simulate-with-qiskit-aer)\n",
+    "    - Learn about [Exact and noisy simulation with Qiskit Aer primitives.](/guides/simulate-with-qiskit-aer)\n",
     "    - Learn about [available Qiskit Runtime options.](/guides/runtime-options-overview)\n",
     "    - Learn about [Error mitigation and suppression techniques.](/guides/error-mitigation-and-suppression-techniques)\n",
     "    - Visit the [Transpile with pass managers](transpile-with-pass-managers) topic.\n",
