Revert "Remove all absolute URLs to docs"
This reverts commit fec745c4a9af4fdd81c60eb093ef62685cd1bec5.

--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -66,7 +66,7 @@
     "/>\n",
     "\n",
     "<Admonition title=\"Note\" type=\"note\">\n",
-    "  This video uses the `QiskitRuntimeService.get_backend` method, which has since been deprecated. Use [`QiskitRuntimeService.backend`](/api/qiskit-ibm-runtime/qiskit-runtime-service#backend) instead.\n",
+    "  This video uses the `QiskitRuntimeService.get_backend` method, which has since been deprecated. Use [`QiskitRuntimeService.backend`](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit-runtime-service#backend) instead.\n",
     "</Admonition>"
    ]
   },
@@ -233,16 +233,12 @@
     "\n",
     "When executing circuits on a device, it is important to optimize the set of instructions that the circuit contains and minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](./transpile#instruction-set-architecture) and must consider the device's basis gates and qubit connectivity.\n",
     "\n",
-    "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA.\n",
-    "\n",
-    "<Admonition type=\"note\">\n",
-    "The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/guides/cloud-setup#cloud-untrusted)</CloudContent> to authenticate with your API token.\n",
-    "</Admonition>"
+    "The following code instantiates a real device to submit a job to and transforms the circuit and observables to match that backend's ISA."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a901271",
    "metadata": {},
    "outputs": [
@@ -263,6 +259,9 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
+    "# to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "backend = service.least_busy(simulator=False, operational=True)\n",
@@ -571,22 +570,22 @@
    "source": [
     "### Step 2. Optimize the problem for execution on quantum hardware\n",
     "\n",
-    "Transform the circuit and observables to match the backend's ISA.\n",
-    "\n",
-    "<Admonition type=\"note\">\n",
-    "The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/guides/cloud-setup#cloud-untrusted)</CloudContent> to authenticate with your API token.\n",
-    "</Admonition>"
+    "Transform the circuit and observables to match the backend's ISA."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "428f05e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
+    "# to authenticate with your API token.\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "\n",
