--- a/docs/guides/kipu-optimization.ipynb
+++ b/docs/guides/kipu-optimization.ipynb
@@ -275,16 +275,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e5cd4ac8",
-   "metadata": {},
-   "source": [
-    "<Admonition type=\"note\">\n",
-    "The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/guides/cloud-setup#cloud-untrusted)</CloudContent> to authenticate with your API token.\n",
-    "</Admonition>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "95a715d2",
@@ -293,6 +283,9 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
+    "# to authenticate with your API token.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# Access Function\n",
