--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -17,9 +17,6 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 </CloudContent>
 
 The following example demonstrates how to port existing code to leverage Qiskit Serverless.
-<Admonition type="note">
-The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/guides/cloud-setup#cloud-untrusted)</CloudContent> to authenticate with your API token.
-</Admonition>
 
 ## Update the experiment
 <LegacyContent>
@@ -33,6 +30,9 @@ from qiskit.circuit.random import random_circuit
 qc_random = [(random_circuit(20, 20, measure=True)) for _ in range(30)]
 optimization_level = 3
 
+# If you have not previously saved your credentials, follow instructions at
+# https://docs.quantum.ibm.com/guides/setup-channel#iqp
+# to authenticate with your API token.
 service = QiskitRuntimeService(channel="ibm_quantum")
 backend = service.get_backend(backend_name)
 
@@ -43,7 +43,7 @@ pass_manager = generate_preset_pass_manager(
 # @distribute_task(target={"cpu": 1})
 def transpile_parallel(circuit, pass_manager):
     """Distributed transpilation for an abstract circuit into an ISA circuit for a given backend."""
-
+    
     isa_circuit = pass_manager.run(circuit)
 
     return isa_circuit
@@ -78,13 +78,14 @@ pass_manager = generate_preset_pass_manager(
 @distribute_task(target={"cpu": 1})
 def transpile_parallel(circuit, pass_manager):
     """Distributed transpilation for an abstract circuit into an ISA circuit for a given backend."""
-
+    
     isa_circuit = pass_manager.run(circuit)
 
     return isa_circuit
 
 try:
     # Get backend
+    # Follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.
     service = QiskitRuntimeService(channel="ibm_quantum")
     backend = service.get_backend(backend_name)
 
@@ -104,7 +105,7 @@ try:
     })
 
 except Exception as e:
-    # Exception handling
+    # Exception handling 
     import traceback
     print(traceback.format_exc())
 ```
@@ -124,6 +125,9 @@ from qiskit.circuit.random import random_circuit
 qc_random = [(random_circuit(20, 20, measure=True)) for _ in range(30)]
 optimization_level = 3
 
+# If you have not previously saved your credentials, follow instructions at
+# https://quantum.cloud.ibm.com/docs/guides/cloud-setup
+# to authenticate with your API key.
 service = QiskitRuntimeService(channel="ibm_cloud")
 backend = service.get_backend(backend_name)
 
@@ -134,7 +138,7 @@ pass_manager = generate_preset_pass_manager(
 # @distribute_task(target={"cpu": 1})
 def transpile_parallel(circuit, pass_manager):
     """Distributed transpilation for an abstract circuit into an ISA circuit for a given backend."""
-
+    
     isa_circuit = pass_manager.run(circuit)
 
     return isa_circuit
@@ -169,13 +173,14 @@ pass_manager = generate_preset_pass_manager(
 @distribute_task(target={"cpu": 1})
 def transpile_parallel(circuit, pass_manager):
     """Distributed transpilation for an abstract circuit into an ISA circuit for a given backend."""
-
+    
     isa_circuit = pass_manager.run(circuit)
 
     return isa_circuit
 
 try:
     # Get backend
+    # Follow instructions at https://quantum.cloud.ibm.com/docs/guides/cloud-setup to authenticate with your API key.
     service = QiskitRuntimeService(channel="ibm_cloud")
     backend = service.get_backend(backend_name)
 
@@ -195,7 +200,7 @@ try:
     })
 
 except Exception as e:
-    # Exception handling
+    # Exception handling 
     import traceback
     print(traceback.format_exc())
 ```
@@ -212,7 +217,7 @@ Follow the instructions on the [Introduction to Qiskit Functions](/guides/functi
 from qiskit_ibm_catalog import QiskitServerless, QiskitFunction
 
 # Authenticate to the remote cluster and submit the pattern for remote execution.
-serverless = QiskitServerless()
+serverless = QiskitServerless() 
 
 transpile_remote_demo = QiskitFunction(
     title="transpile_remote_serverless",
