These changes shouldn't have happened.

--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -66,7 +66,7 @@
     "/>\n",
     "\n",
     "<Admonition title=\"Note\" type=\"note\">\n",
-    "  This video uses the `QiskitRuntimeService.get_backend` method, which has since been deprecated. Use [`QiskitRuntimeService.backend`](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit-runtime-service#backend) instead.\n",
+    "  This video uses the `QiskitRuntimeService.get_backend` method, which has since been deprecated. Use [`QiskitRuntimeService.backend`](/api/qiskit-ibm-runtime/qiskit-runtime-service#backend) instead.\n",
     "</Admonition>"
    ]
   },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9a901271",
    "metadata": {},
    "outputs": [
@@ -264,9 +264,6 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "backend = service.least_busy(simulator=False, operational=True)\n",
@@ -585,17 +582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "428f05e7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "\n",
